# FeedX

./: .env.example  .gitignore  README.md  docker-compsoe.yaml  main.py  pyproject.toml
evals/: content_agent_eval.py
src/: __init__.py  cli.py
src/agent/: content.py
src/api/: __init__.py  models.py  routes.py
src/database/: __init__.py  db_builder.py  models.py
src/queue/: __init__.py  back_queue.py  content_queue.py  feed_queue.py  front_queue.py  models.py  scheduler_queue.py
src/workers/: content_worker.py  crawl_worker.py  worker.py  worker_pool.py
