[project]
name = "feedx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "appwrite>=19.2.0",
    "black>=26.5.1",
    "python-dotenv>=1.2.2",
    "scout",
]

[tool.uv.sources]
scout = { git = "https://github.com/ArnabChatterjee20k/Scout.git" }
